fix issue#39 and form-panel in new popups on Safari

--- a/app/components/cancelation-form/cancelation-form.scss
+++ b/app/components/cancelation-form/cancelation-form.scss
@@ -7,6 +7,7 @@
   padding: 48px 70px 60px;
 
   @include screen('md') {
+    position: static;
     padding: 48px $container-padding-tablet 60px;
   }
 
@@ -71,7 +72,6 @@
     padding-right: 70px;
 
     @include screen('md') {
-      position: fixed;
       padding-left: $container-padding-tablet;
       padding-right: $container-padding-tablet;
     }
