--- a/app/components/popup-cancelation-contract/popup-cancelation-contract.scss
+++ b/app/components/popup-cancelation-contract/popup-cancelation-contract.scss
@@ -6,6 +6,13 @@
   }
 
   .popup {
+    &__scrollblock {
+      @include screen('md') {
+        max-height: 100%;
+        overflow: auto;
+      }
+    }
+
     &__header {
       padding: 51px 70px 10px;
       justify-content: space-between;
