--- a/app/components/suggestion-form/suggestion-form.scss
+++ b/app/components/suggestion-form/suggestion-form.scss
@@ -8,6 +8,7 @@
   margin-top: 5px;
 
   @include screen('md') {
+    position: static;
     padding: 48px $container-padding-tablet 160px;
   }
 
@@ -16,16 +17,11 @@
   }
 
   .form {
+    position: static;
 
     &__title {
       line-height: 1.26;
       max-width: 720px;
-    }
-  }
-
-  .form-panel {
-    @include screen('md') {
-      position: fixed;
     }
   }
 }
